--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -365,3 +365,10 @@ main {
   justify-content: space-evenly;
   gap: 2em;
 }
+
+.preview {
+  height: 85vh;
+  aspect-ratio: 1 / 1.414;
+
+  border: 1px solid #000;
+}
